# hookexample

./: .gitignore  Cargo.toml  build.bat
src/: hook.rs  lib.rs
