[package]
name = "hookexample"
version = "0.1.0"
authors = ["Mack Stump <mack@mackstump.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = { version = "0.6.0", default-features = false }
lazy_static = "1.3.0"
log = "0.4"
simple_logger = "1.0.1"
widestring = "0.4.0"
winapi = { version = "0.3.6", features = ["consoleapi", "wincon"] }