[package]
name = "hookexample"
version = "0.1.0"
authors = ["Mack Stump <mack@mackstump.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = { version = "0.7.1", default-features = false }
lazy_static = "1.4.0"
log = "0.4.11"
simple_logger = "1.6.0"
widestring = "0.4.2"
winapi = { version = "0.3.9", features = ["consoleapi", "wincon"] }
argh = "0.1.3"
